--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,10 +3,8 @@
  * Все паршалы подключаются сюда.
  */
 
-// Стили для файла с примером HTML-фрагмента
-
 @import './base/base';
-@import './utils/example';
+@import './utils/mixins';
 @import './layout/header/header';
 
 @import './layout/footer/footer';
