--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,7 +6,7 @@
 // Стили для файла с примером HTML-фрагмента
 
 @import './base/base';
-@import './utils/example';
+@import './utils/mixins';
 @import './layout/header/header';
 
 @import './layout/footer/footer';
