--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,3 +5,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.icon-favorite {
+  color: #ff6b08;
+  font-size: 100px;
+}
+
+.icon-social {
+color: #545454;
+font-size: 44px;
+}
