--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,5 +1,5 @@
 @import './variables';
-
+@import './container';
 body {
   background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
   background-repeat: no-repeat;
