--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 
 // Стили для файла с примером HTML-фрагмента
 
-@import './base/base';
+// @import './base/base';
 @import './utils/mixins';
 @import './layout/header/header';
 
