--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,8 @@
-<div class="container"></div>
+<div class="container">
+  <div class="page-footer">
+    <p class="copyright-text">&copy;2021 | All Rights Reserved |</p>
+    <p class="text-company">
+      Developed with by <i class="material-icons icon-favorite">favorite</i> GoIT Students
+    </p>
+  </div>
+</div>
