--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -7,3 +7,5 @@ $secondary-text-color: #545454;
 $icon-color: #818181;
 $modal-text-color: #8c8c8c;
 $error-text-color: #ff001b;
+
+$main-font: 'Roboto', sans-serif;
