--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,21 +1,7 @@
+// ===========  BASE block
+
 @import './variables';
 @import './mixins';
 @import './container';
-
-
-
-body {
-  background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.icon-favorite {
-  color: #ff6b08;
-  font-size: 100px;
-}
-
-.icon-social {
-  color: #545454;
-  font-size: 44px;
-}
+@import './common';
+@import './visually-hidden';
