Добавляє стилі до пагінації

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,11 +1,16 @@
 <div class="pagination-style">
-    <button class="btn-page previous" data-index="1">←</button>
-    <span class="btn-dots js-dots1">...</span>
-    <button class="btn-page1 active btn" data-index="1">1</button>
-    <button class="btn-page2 btn" data-index="2">2</button>
-    <button class="btn-page3 btn" data-index="3">3</button>
-    <button class="btn-page4 btn" data-index="4">4</button>
-    <button class="btn-page5 btn" data-index="5">5</button>
-    <span class="btn-dots js-dots">...</span>
-    <button class="btn-page next" data-index="1">→</button>
+    <div class="pagination__container_pages">
+        <i class="material-icons icon-favorite">navigate_before</i>
+        <div class="pagenumbers">
+            <button class="btn-page1 active btn" data-index="1">1</button>
+            <button class="btn-page2 btn" data-index="2">2</button>
+            <button class="btn-page3 btn" data-index="3">3</button>
+            <button class="btn-page4 btn" data-index="4">4</button>
+            <button class="btn-page5 btn" data-index="5">5</button>
+            <span class="btn-dots js-dots">...</span>
+            <button>100</button>
+        </div>
+        <i class="material-icons icon-favorite">navigate_next</i>
+
+    </div>
 </div>
