--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,7 +5,7 @@
 
 
 body {
-  background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
+  // background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
   background-repeat: no-repeat;
   background-size: cover;
 }
