--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,13 @@
   <div class="wrapper">
     <div class="logo-wrapper">
       <a class="logo-link" href="index.html">
-        <img class="logo-img" src="./images/header/logo.svg" width="50" height="50" alt="film" />
+        <img
+          class="logo-img"
+          src="./images/header/logo-min.svg"
+          width="50"
+          height="50"
+          alt="film"
+        />
         <span class="logo-text">Filmoteka</span>
       </a>
     </div>
