--- a/src/sass/layout/index/_pagination.scss
+++ b/src/sass/layout/index/_pagination.scss
@@ -1,1 +1,54 @@
-// ffff
+.pagination-style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 60px;
+}
+.pagination__container_pages {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagenumbers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.pagenumbers button.active {
+    background-color: $accent-icon;
+    color: $white;
+    border-radius: 5px;
+}
+.pagenumbers button {
+    width: 40px;
+    height: 40px;
+    appearance: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin: 5px;
+    transition: 0.5s;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.33;
+    font-style: normal;
+    border-radius: 5px;
+}
+.pagenumbers button:hover {
+    background-color: $accent-icon;
+    color: $white;
+    border-radius: 5px;
+}
+.btn-dots {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    border: none;
+    background-color: $white;
+    text-align: center;
+    line-height: 65px;
+}
