--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -1,29 +1,182 @@
-// Header
-.wrapper {
-  .logo-wrapper {
-    .logo-link {
-      .logo-img {
-        .logo-text {
-        }
-      }
-    }
-    .page-header {
-      .activ-link {
-      }
-      .library {
-      }
-      .auth {
-      }
-    }
+.header {
+  position: relative;
+  display: block;
+  // display: flex;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  // background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56));
+  // // url(.../images/header/header_d_x1.jpg);
+
+  padding-top: 46px;
+  padding-bottom: 118px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.flex {
+  display: flex;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.nav-logo {
+  display: block;
+  margin-right: 29px;
+  font-weight: 500;
+  font-size: 30px;
+  color: $white;
+}
+
+.nav-logo-icon {
+  width: 24px;
+  height: 24px;
+}
+.logo-style {
+  display: flex;
+  align-items: center;
+}
+
+.logo-text {
+  // display: none;
+  z-index: 999;
+}
+.current__myLibraryBtn {
+  background-color: $accent-icon;
+  border: 1px solid transparent;
+}
+.material-icons {
+  margin: 0;
+  color: $white;
+  // border: 2px solid $white;
+  border-radius: 50%;
+  // font-size: 44px;
+  width: 18px;
+  height: 18px;
+  // @include transition(all);
+  &:hover,
+  &:focus {
+    background-color: $secondary-text-color;
+    transform: scale(1.15);
   }
-  .search-form {
-    .search-field {
-      .erorr-message {
-      }
-      .search-btn {
-        .material-icons {
-        }
-      }
-    }
+}
+
+@include for-size(tablet) {
+  .header {
+    padding-bottom: 118px;
+  }
+
+  .nav-logo {
+    margin-right: 114px;
+  }
+  .nav-logo-icon {
+    margin-right: 10px;
+  }
+
+  .film-search {
+    text-align: center;
+    margin: auto;
+  }
+
+  .film-search-input {
+    width: 330px;
+  }
+
+  .logo-text {
+    display: block;
+    font-weight: 500;
+    font-size: 30px;
+    color: $white;
+  }
+
+  .film-search-input-error {
+    width: 616px;
+    left: 50%;
+    transform: translate(-50%);
+  }
+}
+
+@include for-size(desktop) {
+  .nav-logo {
+    margin-right: 243px;
+  }
+
+  .film-search-input-error {
+    width: 882px;
+  }
+}
+
+.nav-btn {
+  position: relative;
+
+  padding: 0;
+  border: 0;
+  background: none;
+  cursor: pointer;
+  display: block;
+  font-family: $main-font;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  color: $white;
+
+  &:not(:last-child) {
+    margin-right: 33px;
+  }
+}
+
+.current {
+  &::after {
+    position: absolute;
+    bottom: 15;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: $accent-icon;
+  }
+}
+
+.header__background-home {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(/images/header/home/header_d_x1.jpg);
+  background-color: $black;
+}
+
+.header__background-myLibrary {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(/images/header/home/header_d_x1.jpg);
+  background-color: $black;
+}
+
+@include to-size($tablet, $max-tablet) {
+  .header__background-home {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(/images/header/home/header_d_x1.jpg);
+    background-color: $black;
+  }
+
+  .header__background-myLibrary {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(/images/header/home/header_d_x1.jpg);
+    background-color: $black;
+  }
+}
+
+@include for-size($desktop) {
+  .header__background-home {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(/images/header/home/header_d_x1.jpg);
+    background-color: $black;
+  }
+
+  .header__background-myLibrary {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(/images/header/home/header_d_x1.jpg);
+    background-color: $black;
   }
 }
