--- a/src/templates/oneMovieTemplate.hbs
+++ b/src/templates/oneMovieTemplate.hbs
@@ -19,10 +19,14 @@
 
     <div class='movie-content'>
       <h2 class='movie-title'> {{title}} </h2>
-      <p class='genre'>
-        {{genre_ids}}Пока не готово
-        {{!-- {{#if genres}}{{genres}}{{/if}} --}}
-      </p>
+
+      <div class='genre-release-date'>
+        {{#each genres}}
+          <p class='genre'>
+            {{name}}
+          </p>
+        {{/each}}
+      </div>
 
       <p class='movie-release-date'> {{release_date}} </p>
 
