--- a/src/templates/oneMovieTemplate.hbs
+++ b/src/templates/oneMovieTemplate.hbs
@@ -19,6 +19,7 @@
 
     <div class='movie-content'>
       <h2 class='movie-title'> {{title}} </h2>
+      <div class='orangeText'>
       <p class='genre'>
         {{genre_ids}}Пока не готово
         {{!-- {{#if genres}}{{genres}}{{/if}} --}}
@@ -29,6 +30,7 @@
       <p class='movie-vote'>
         {{vote_average}}
       </p>
+      </div>
 
     </div>
   </li>
