fix path to no-poster

--- a/src/templates/oneMovieTemplate.hbs
+++ b/src/templates/oneMovieTemplate.hbs
@@ -11,7 +11,7 @@
     {{else}}
       <img
         class='movie-image'
-        src='../images/no-poster.jpg'
+        src='https:/moltogusto.com.ua/no-poster.jpg'
         loading='lazy'
         alt='Movie {{title}} poster'
       />
