--- a/src/templates/oneMovieTemplate.hbs
+++ b/src/templates/oneMovieTemplate.hbs
@@ -22,10 +22,10 @@
       <div class='genre-release-date'>
         {{#each genres}}
           <p class='genre'>
-            {{name}}
+            {{name}}|
           </p>
         {{/each}}
-        <p class='movie-release-date'> {{release_date}} </p>
+        <p class='movie-release-date'> {{release_date}}| </p>
         <p class='movie-vote'>
           {{vote_average}}
         </p>
