bagfix html and scss

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
     <!-- </div>  -->
     <div class="flex">
       <button class="nav-btn current" data-index="home" id="homeBtn">HOME</button>
-      <button class="nav-btn" data-index="mylibrary">MY LIBRARY</button>
+      <button class="nav-btn" data-index="libraryBtn">MY LIBRARY</button>
     </div>
   </nav>
   <div data-index="headerDinamicContent">
