add footer style

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,10 @@
 <div class="container">
-  <div class="page-footer">
-    <p class="copyright-text">&copy;2021 | All Rights Reserved |</p>
-    <p class="text-company">
-      Developed with by <i class="material-icons icon-favorite">favorite</i> GoIT Students
+  <div class="footer-page">
+    <p class="footer-text">&copy;2021 | All Rights Reserved |</p>
+    <p class="footer-text">
+      Developed with
+      <i class="material-icons footer-favorite">favorite</i>
+      by <a class="footer-link" href="#">GoIT Students</a>
     </p>
   </div>
 </div>
