--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -57,10 +57,9 @@
   // font-size: 44px;
   width: 18px;
   height: 18px;
-  // @include transition(all);
+  background-color: transparent;
   &:hover,
   &:focus {
-    background-color: $secondary-text-color;
     transform: scale(1.15);
   }
 }
