--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,9 @@
+$main-font: 'Roboto', sans-serif;
+
+body {
+  font-family: $main-font;
+  font-style: normal;
+}
 a {
   text-decoration: none;
 }
@@ -18,4 +24,10 @@ h3,
 h4,
 p {
   margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
