--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  width: 100%;
+  // width: 100%;
   padding-right: 20px;
   padding-left: 20px;
   margin-right: auto;
