--- a/src/sass/layout/footer/_footer.scss
+++ b/src/sass/layout/footer/_footer.scss
@@ -11,7 +11,7 @@
   }
 
   &-page {
-    // margin: 0 auto;
+    margin: 0 auto;
     padding-top: 30px;
     height: 100px;
     @include for-size(tablet) {
