--- a/src/sass/layout/index/_pagination.scss
+++ b/src/sass/layout/index/_pagination.scss
@@ -11,13 +11,13 @@
   align-items: center;
 }
 
-.pagen-umbers {
+.page-numbers {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
-.pagen-umbers button.active {
+.page-numbers button.active {
   background-color: $accent-icon;
   color: $white;
   border-radius: 5px;
