--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,10 @@
       <p>
         <!-- fetch status -->
       </p>
-      <ul></ul>
     </form>
+    <div class="btn-container is-hidden">
+      <button class="lib-btn watched">Watched</button>
+      <button class="lib-btn queue">Queue</button>
+    </div>
   </div>
 </div>
