--- a/src/sass/components/_basiclightbox.scss
+++ b/src/sass/components/_basiclightbox.scss
@@ -134,7 +134,7 @@ $basicLightbox__timing: ease !default;
   cursor: pointer;
   transition: background-color var(--animation-duration) var(--timing-function);
   outline: none;
-  // background-image: url('../');
+  background-color: tomato;
   background-position: center;
   background-size: 60%;
   background-repeat: no-repeat;
