--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <nav class="nav">
     <a href="" class="nav-logo logo-style">
       <img class="nav-logo-icon" src="./images/header/logo.svg" alt="film" />
-      <span class="logo-text">Filmoteka</span>
+      <span class="logo-text hidden-logo">Filmoteka</span>
     </a>
     <!-- <div class=""> -->
     <!-- место для личного кабинета -->
