add modal with image

--- a/src/templates/movieDetail.hbs
+++ b/src/templates/movieDetail.hbs
@@ -1,6 +1,10 @@
 <div class='modal-card'>
   <button class='btn-close'></button>
-  <img class='modal-card__img' alt='{{poster_path}}' />
+  <img
+    class='modal-card__img'
+    src='https://image.tmdb.org/t/p/w500{{poster_path}}'
+    alt='{{title}}'
+  />
 
   <div class='modal-card__content'>
     <h2 class=''>{{original_title}}</h2>
@@ -8,6 +12,11 @@
     <p class=''>'Popularity' {{popularity}}</p>
     <p class=''>'Original Title' {{original_title}}</p>
     <p class=''>'Genre' {{genres.name}}</p>
+    <span class='genres'>
+      {{#each genres}}
+        <span class='genreItem'>{{this.name}}</span>
+      {{/each}}
+    </span>
     <h3 class=''>'About'</h3>
     <p class=''> {{overview}}</p>
 
