--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
       <button class="nav-btn" data-index="libraryBtn">MY LIBRARY</button>
     </div>
   </nav>
-  <div data-index="headerDinamicContent">
+  <div data-index="headerContent">
     <form class="film-search" action="">
       <input
         class="film-search-input"
