--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/base';
 
 // ===========  INDEX block
+@import './components/spinner';
 @import './layout/index/filmCards';
 @import './layout/index/fullPosterFilm';
 @import './layout/index/libraryFilm';
