--- a/src/sass/components/_spinner.scss
+++ b/src/sass/components/_spinner.scss
@@ -1,11 +1,60 @@
-svg {
-  width: 100px;
-  height: 100px;
-  margin: 20px;
-  display: inline-block;
-  currentcolor: $accent-icon;
-}
-b {
-  font-weight: 700;
-}
+// svg {
+//   width: 100px;
+//   height: 100px;
+//   margin: 20px;
+//   display: inline-block;
+//   currentcolor: $accent-icon;
+// }
+// b {
+//   font-weight: 700;
+// }
 // ♥
+// .spinner {
+//   height: 100%;
+//   width: 100%;
+//   display: block;
+//   margin: 0 auto;
+// }
+.spinner {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  //   margin: 0 0 2em;
+  //   height: 100px;
+  //   width: 20%;
+  //   text-align: center;
+  //   padding: 1em;
+  //   margin: 0 auto 1em;
+  //   display: inline-block;
+  //   vertical-align: top;
+
+  @include for-size($tablet) {
+    display: block;
+    width: 30%;
+  }
+  @include for-size($desktop) {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+// #loader {
+//   width: 30%;
+//   height: 30%;
+
+//   @include for-size($tablet) {
+//     width: 65%;
+//     height: 65%;
+//   }
+//   @include for-size($desktop) {
+//     width: 100%;
+//     height: 100%;
+//   }
+// }
+
+//     width: 1200px;
+//   }
+// svg path,
+// svg rect {
+//   fill: $accent-color;
+// }
