--- a/src/sass/layout/index/_filmCards.scss
+++ b/src/sass/layout/index/_filmCards.scss
@@ -84,7 +84,10 @@ text-align: left;
   color: $accent-text;
 }
  .movie-vote {
-  color: $accent-text;
+  color: $white;
+  background-color: $accent-icon;
+  border-radius: 3px;
+  
 
 }
 
