--- a/src/templates/header/myLibery.hbs
+++ b/src/templates/header/myLibery.hbs
@@ -1,4 +1,4 @@
 <div class="myLibraryButtons">
-    <button class="btn" data-index="">WATCHED</button>
-    <button class="btn" data-index="">QUEUE</button>
+    <button class="btn-lib" data-index="">WATCHED</button>
+    <button class="btn-lib" data-index="">QUEUE</button>
 </div>
