--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -62,9 +62,23 @@
   }
 }
 .film-search-input {
-  // opacity: 0;
-  background-color: $black;
+  font-family: $main-font;
+  color: $white;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid $white;
+  font-size: 14px;
 }
+// .film-search-input:focus,
+// .film-search-input:hover {
+//   border-color: transparent;
+// }
+
+.subscribe-input:placeholder {
+  font-family: $main-font;
+  color: $white;
+}
+
 .film-search {
   margin-top: 41px;
 }
