--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<div class="container header header__background-home container" data-index="header">
+<div class="container header header__background-home " data-index="header">
   <nav class="nav">
     <a href="" class="nav-logo logo-style">
       <img class="nav-logo-icon" src="./images/header/logo.svg" alt="film" />
