add pagination to Home page

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,4 +1,4 @@
-<div class="pagination-style">
+<!-- <div class="pagination-style">
   <div class="pagination__container_pages">
     <a><i class="material-icons icon-pagination">navigate_before</i></a>
     <div class="page-numbers">
@@ -11,5 +11,18 @@
       <button>100</button>
     </div>
     <a><i class="material-icons icon-pagination">navigate_next</i></a>
+  </div>
+</div> -->
+
+
+<div class="pagination__container">
+  <div class="pagination__container_pages">
+    <div class="pag-arrow arrow_left">
+      <p class="gg" style="margin-left: -2px; ">🠈</p>
+    </div>
+    <div class="pagenumbers" id="pagination"></div>
+    <div class="pag-arrow arrow_right">
+      <p class="gg"> 🠊</p>
+    </div>
   </div>
 </div>
