--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,28 +1,11 @@
-<!-- <div class="pagination-style">
-  <div class="pagination__container_pages">
-    <a><i class="material-icons icon-pagination">navigate_before</i></a>
-    <div class="page-numbers">
-      <button class="btn-page1 active btn" data-index="1">1</button>
-      <button class="btn-page2 btn" data-index="2">2</button>
-      <button class="btn-page3 btn" data-index="3">3</button>
-      <button class="btn-page4 btn" data-index="4">4</button>
-      <button class="btn-page5 btn" data-index="5">5</button>
-      <span class="btn-dots js-dots">...</span>
-      <button>100</button>
-    </div>
-    <a><i class="material-icons icon-pagination">navigate_next</i></a>
-  </div>
-</div> -->
-
-
 <div class="pagination__container">
   <div class="pagination__container_pages">
     <div class="pag-arrow arrow_left">
-      <p class="gg" style="margin-left: -2px; ">🠈</p>
+      <p class="arrow_elem">🠈</p>
     </div>
     <div class="pagenumbers" id="pagination"></div>
     <div class="pag-arrow arrow_right">
-      <p class="gg"> 🠊</p>
+      <p class="arrow_elem"> 🠊</p>
     </div>
   </div>
 </div>
