--- a/src/templates/movieDetail.hbs
+++ b/src/templates/movieDetail.hbs
@@ -1,4 +1,5 @@
 <div class='modal-card'>
+   <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
   <img
     class='modal-card__img'
     src='https://image.tmdb.org/t/p/w500{{poster_path}}'
