--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,7 +10,7 @@
 @import './layout/index/pagination';
 
 // ===========  COMPONENTS block
-@import './components/basiclightbox';
+// @import './components/basiclightbox';
 
 // ===========  LAYOUT block
 @import './layout/header/header';
