--- a/src/sass/layout/index/_filmCards.scss
+++ b/src/sass/layout/index/_filmCards.scss
@@ -18,6 +18,7 @@
 }
 .movie-image {
   border-radius: 5px;
+  margin-bottom: 10px;
   @include for-size(phone) {
     width: 280px;
     height: 402px;
