--- a/src/sass/components/_basiclightbox.scss
+++ b/src/sass/components/_basiclightbox.scss
@@ -1,79 +1,79 @@
 // Vars ---------------------------------------------------------------- //
-$basicLightbox__background: rgba(0, 0, 0, 0.8) !default;
-$basicLightbox__zIndex: 1000 !default;
-$basicLightbox__duration: 0.4s !default;
-$basicLightbox__timing: ease !default;
+// $basicLightbox__background: rgba(0, 0, 0, 0.8) !default;
+// $basicLightbox__zIndex: 1000 !default;
+// $basicLightbox__duration: 0.4s !default;
+// $basicLightbox__timing: ease !default;
 
-.lightbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity var(--animation-duration) var(--timing-function);
-}
+// .lightbox {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100vw;
+//   height: 100vh;
+//   opacity: 0;
+//   pointer-events: none;
+//   transition: opacity var(--animation-duration) var(--timing-function);
+// }
 
-.lightbox.is-open {
-  opacity: 1;
-  pointer-events: initial;
-}
+// .lightbox.is-open {
+//   opacity: 1;
+//   pointer-events: initial;
+// }
 
-.lightbox__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-}
+// .lightbox__overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100vw;
+//   height: 100vh;
+//   background-color: rgba(0, 0, 0, 0.8);
+// }
 
-.lightbox__content {
-  transform: scale(0.95);
-  transition: transform var(--animation-duration) var(--timing-function);
-}
+// .lightbox__content {
+//   transform: scale(0.95);
+//   transition: transform var(--animation-duration) var(--timing-function);
+// }
 
-.lightbox.is-open .lightbox__content {
-  transform: scale(1);
-}
+// .lightbox.is-open .lightbox__content {
+//   transform: scale(1);
+// }
 
-.lightbox__image {
-  display: block;
-  width: auto;
-  height: auto;
-  max-height: 100vh;
-  max-width: 100vw;
-}
+// .lightbox__image {
+//   display: block;
+//   width: auto;
+//   height: auto;
+//   max-height: 100vh;
+//   max-width: 100vw;
+// }
 
-.lightbox__button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 48px;
-  height: 48px;
-  background-image: url('../images/sprite.svg#icon-close-button');
-  padding: 0;
-  margin: 0; //sprite.svg#icon-close-button');
-  border: none;
-  border-radius: 50%;
-  // background-color: transparent;
-  background-color: tomato;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color var(--animation-duration) var(--timing-function);
-  outline: none;
+// .lightbox__button {
+//   position: absolute;
+//   top: 8px;
+//   right: 8px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 48px;
+//   height: 48px;
+//   //   background-image: url('../images/sprite.svg#icon-close-button');
+//   padding: 0;
+//   margin: 0; //sprite.svg#icon-close-button');
+//   border: none;
+//   border-radius: 50%;
+//   // background-color: transparent;
+//   background-color: tomato;
+//   color: #fff;
+//   cursor: pointer;
+//   transition: background-color var(--animation-duration) var(--timing-function);
+//   outline: none;
 
-  background-position: center;
-  background-size: 60%;
-  background-repeat: no-repeat;
-}
+//   background-position: center;
+//   background-size: 60%;
+//   background-repeat: no-repeat;
+// }
 
 // .lightbox__button:hover,
 // .lightbox__button:focus {
