--- a/src/sass/layout/index/_fullPosterFilm.scss
+++ b/src/sass/layout/index/_fullPosterFilm.scss
@@ -30,14 +30,14 @@
   position: absolute;
   top: 20px;
   left: 50%;
-  margin: 0px;
+  margin: 0;
 
   width: 280px;
   background-color: $white;
   transform: translateX(-50%) scale(1);
 
   @include for-size(tablet) {
-    top: 231px;
+    top: 276px;
     width: 618px;
   }
   @include for-size(desktop) {
@@ -47,18 +47,20 @@
 }
 .lightbox__button {
   position: absolute;
-  top: 38px;
-  right: 38px;
+  top: 18px;
+  right: 18px;
   display: flex;
-  width: 14px;
-  height: 14px;
+  width: 28px;
+  height: 28px;
   padding: 0;
   margin: 0;
   border: none;
+  background-image: url('../images/close.svg');
   background-color: transparent;
   cursor: pointer;
   outline: none;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .modal-card {
@@ -181,13 +183,23 @@
   }
 }
 .modal-card__genre {
-  margin-left: 78px;
-  margin-bottom: 10px;
+  //   // margin-left: 78px;
+
+  margin-bottom: 0;
+  //   // @include for-size(desktop) {
+  //   //   margin-left: 120px;
+  //   // }
+}
+.modal-card__details-genres {
+  margin-right: 76px;
+  margin-bottom: 0;
+  display: inline-block;
   @include for-size(desktop) {
-    margin-left: 120px;
+    margin-right: 120px;
   }
 }
 .modal-card__about {
+  margin-top: 20px;
   margin-bottom: 10px;
   font-family: Roboto;
   font-style: normal;
