--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,8 +25,13 @@
       </p>
     </form>
     <div class="btn-container is-hidden">
-      <button class="lib-btn watched">Watched</button>
-      <button class="lib-btn queue">Queue</button>
+      <button class="lib-btn btn watched current__myLibraryBtn" data-index="watched">Watched</button>
+      <button class="lib-btn btn queue" data-index="queue">Queue</button>
+<!-- <div class="myLibraryButtons">
+  <button class="btn-lib" data-index="watched">WATCHED</button>
+  <button class="btn-lib" data-index="queue">QUEUE</button>
+</div> -->
+
     </div>
   </div>
 </div>
