--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -1,28 +1,3 @@
-// .container-hed {
-//   position: relative;
-//   // width: 100%;
-//   padding-right: 20px;
-//   padding-left: 20px;
-//   margin-right: auto;
-//   margin-left: auto;
-
-//   @include for-size($phone) {
-//     width: 480px;
-//   }
-
-//   @include for-size($tablet) {
-//     width: 768px;
-//     padding-right: 76px;
-//     padding-left: 76px;
-//   }
-
-//   @include for-size($desktop) {
-//     width: 1024px;
-//     padding-right: 71px;
-//     padding-left: 71px;
-//   }
-// }
-
 .header {
   position: relative;
   display: block;
@@ -251,11 +226,23 @@
     background-color: $black;
   }
 }
+.myLibraryButtons {
+  margin-top: 49px;
+  margin-bottom: 65px;
+}
 @media screen and (min-width: 1024px) {
   .myLibraryButtons {
-    margin-top: 121px;
-    margin-bottom: 65px;
     margin-left: 369px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .myLibraryButtons {
+    margin-left: 241px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .btn-lib {
+    width: 129px;
   }
 }
 .btn-lib {
