--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,4 @@
 // ===========  LAYOUT block
 @import './layout/header/header';
 @import './layout/footer/footer';
+@import './layout/footer/teamModal';
