--- a/src/sass/layout/footer/_teamModal.scss
+++ b/src/sass/layout/footer/_teamModal.scss
@@ -11,7 +11,7 @@
   height: 50px;
   border-radius: 4px;
 }
-.teamcard-list-item {
+.team-card-list-item {
   margin: 15px;
   flex-basis: calc(100% / 3 - 10px);
 }
