--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,7 +13,7 @@
       <div class="modal-content">
         <label class="modal-close" for="modal-toggle">&#x2715;</label>
 
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Oleg.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Oleg <br />Yamhurov</h2>
           <p class="team-discription">Team Lead</p>
@@ -21,13 +21,13 @@
             >yamhurov.oleh1@gmail.com</a
           >
         </div>
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Sergii.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Sergii <br />Bogush</h2>
           <p class="team-discription">Tech Lead</p>
           <a class="team-contact" href="mailto:sergbogush1@gmail.com">sergbogush1@gmail.com</a>
         </div>
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Andriy.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Andriy<br />Hedzyk</h2>
           <p class="team-discription">Scrum Master</p>
@@ -35,7 +35,7 @@
             >andriy.hedzyk1@gmail.com</a
           >
         </div>
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Zoryana.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Zoryana <br />Kuziv</h2>
           <p class="team-discription">Developer</p>
@@ -44,7 +44,7 @@
           >
         </div>
 
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Irina.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Irina <br />Samarina</h2>
           <p class="team-discription">Developer</p>
@@ -53,7 +53,7 @@
           >
         </div>
 
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Sergey.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Sergey <br />Michaylichenko</h2>
           <p class="team-discription">Developer</p>
@@ -61,7 +61,7 @@
           <a class="team-contact" href="mailto:4eptnk1@gmail.com">4eptnk@gmail.com</a>
         </div>
 
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Alina.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Alina <br />Pristinskaya</h2>
           <p class="team-discription">Developer</p>
@@ -70,7 +70,7 @@
           >
         </div>
 
-        <div class="teamcard-list-item">
+        <div class="team-card-list-item">
           <img src="./images/photo/Stanislav.jpg" alt="teammate photo" class="team-card-list-img" />
           <h2 class="team-name">Stanislav<br />Veremchuk</h2>
           <p class="team-discription">Developer</p>
