--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,11 +1,11 @@
 <div class="pagination__container">
   <div class="pagination__container_pages">
     <div class="pag-arrow arrow_left">
-      <p class="arrow_elem">🠈</p>
+      <p class="arrow_elem"><i class="material-icons icon-navigate">navigate_before</i></p>
     </div>
     <div class="pagenumbers" id="pagination"></div>
     <div class="pag-arrow arrow_right">
-      <p class="arrow_elem"> 🠊</p>
+      <p class="arrow_elem"><i class="material-icons icon-navigate">navigate_next</i></p>
     </div>
   </div>
 </div>
