--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,7 +4,8 @@
   padding-left: 20px;
   margin-right: auto;
   margin-left: auto;
-
+  width: 100vw;
+  
   @include for-size($phone) {
     width: 480px;
   }
