Додає модалку Наша команда

--- a/src/partials/teamModal.html
+++ b/src/partials/teamModal.html
@@ -1,4 +1,4 @@
-<div class="modal-container container">
+<!-- <div class="modal-container container">
   <input id="modal-toggle" type="checkbox" />
   <label class="modal-btn" for="modal-toggle">Our Team =)</label>
   <label class="modal-backdrop" for="modal-toggle"></label>
@@ -50,7 +50,7 @@
       <h2 class="team-name">Sergey <br />Michaylichenko</h2>
       <p class="team-discription">Developer</p>
       <!-- Добавишь иконку эмайла -->
-      <a class="team-contact" href="mailto:4eptnk1@gmail.com">4eptnk@gmail.com</a>
+      <!-- <a class="team-contact" href="mailto:4eptnk1@gmail.com">4eptnk@gmail.com</a>
     </div>
 
     <div class="team-card-list-item">
@@ -72,4 +72,4 @@
     </div>
     <label class="modal-content-btn" for="modal-toggle">OK</label>
   </div>
-</div>
+</div> --> -->
