--- a/src/sass/layout/footer/_teamModal.scss
+++ b/src/sass/layout/footer/_teamModal.scss
@@ -1,129 +1,174 @@
-.team-discription {
-  margin-top: 10px;
-  font-size: 16px;
-}
-.team-contact {
-  font-size: 16px;
+.basicLightbox {
+  overflow: scroll;
 }
 
-.team-card-list-img {
-  width: 50px;
-  height: 50px;
-  border-radius: 4px;
-}
-.team-card-list-item {
-  margin: 15px;
-  flex-basis: calc(100% / 3 - 10px);
+.team-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin: -20px;
+
+  @media screen and (max-width: ($tablet - 1)) {
+    margin-top: 70px;
+  }
+
+  width: 240px;
+
+  background-color: #ffffffd0;
+  border-radius: 15px;
+
+  @media screen and (min-width: $tablet) {
+    width: 600px;
+
+    border-radius: 25px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin: -30px;
+
+    width: 1000px;
+  }
 }
 
-.modal-container {
-  padding-top: 0px;
+.team-card {
   position: relative;
-  width: 160px;
-  .modal-btn {
-    display: block;
-    margin: 0 auto;
-    width: 200px;
-    height: auto;
-    line-height: 30px;
-    background: #fff;
-    font-size: 16px;
-    border: 0;
-    border-radius: 3px;
-    cursor: pointer;
-    text-align: center;
-    box-shadow: 0 5px 5px -5px #333;
-    transition: background 0.3s ease-in;
-    &:hover {
-      background: #ff6b08;
-    }
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 20px;
+
+  width: calc((100% - 80px) / 2);
+
+  @media screen and (min-width: $tablet) {
+    width: calc((100% - 160px) / 4);
   }
-  .modal-content,
-  .modal-backdrop {
-    height: 0;
-    width: 0;
-    opacity: 0;
-    visibility: hidden;
-    overflow: hidden;
-    cursor: pointer;
-    transition: opacity 0.2s ease-in;
-  }
-  .modal-close {
-    color: #aaa;
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    padding-top: 3px;
-    background: #fff;
-    font-size: 16px;
-    width: 25px;
-    height: 25px;
-    font-weight: bold;
-    text-align: center;
-    cursor: pointer;
-    &:hover {
-      color: #333;
-    }
-  }
-  .modal-content-btn {
-    position: absolute;
-    text-align: center;
-    cursor: pointer;
-    bottom: 5px;
-    right: 5px;
-    background: #fff;
-    border-radius: 2px;
-    font-size: 14px;
-    padding-top: 9px;
-    font-weight: normal;
-    width: 30px;
-    bottom: 5px;
-    right: 5px;
-    height: 30px;
-    &:hover {
-      color: #fff;
-      background: #ff6b08;
-    }
-  }
-  #modal-toggle {
-    display: none;
-    &.active ~ .modal-backdrop,
-    &:checked ~ .modal-backdrop {
-      background-color: rgba(0, 0, 0, 0.6);
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      left: 0;
-      top: 0;
-      z-index: 9;
-      visibility: visible;
-      opacity: 1;
-      transition: opacity 0.2s ease-in;
-    }
-    &.active ~ .modal-content,
-    &:checked ~ .modal-content {
-      opacity: 1;
-      background-color: #fff;
-      /* max-width: 400px; */
-      width: auto;
-      height: auto;
-      padding: 15px 15px;
-      margin: 30px 30px;
-      position: fixed;
-      flex-wrap: wrap;
-      /* left: calc(50% - 200px); */
-      top: 12%;
-      left: 0;
-      display: flex;
-      border-radius: 4px;
-      z-index: 999;
-      pointer-events: auto;
-      cursor: auto;
-      visibility: visible;
-      box-shadow: 0 3px 7px rgb(0 0 0 / 60%);
-      align-content: center;
-      justify-content: space-between;
-      align-items: center;
-    }
+
+  @media screen and (min-width: $desktop) {
+    margin: 30px;
+
+    width: calc((100% - 240px) / 4);
   }
 }
+
+.team-image {
+  margin-bottom: 10px;
+
+  width: 100%;
+
+  border-radius: 50%;
+  box-shadow: 5px 5px 11px -2px $secondary-text-color;
+}
+
+.team-name {
+  margin-bottom: 5px;
+
+  font-family: $main-font;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.team-role {
+  font-family: $main-font;
+  font-size: 14px;
+
+  @media screen and (max-width: ($tablet - 1)) {
+    font-size: 14px;
+  }
+
+  color: $accent-icon;
+}
+
+.team-git {
+  position: absolute;
+
+  top: 65px;
+  right: -10px;
+
+  @media screen and (min-width: $tablet) {
+    top: 100px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    top: 120px;
+  }
+
+  transform: scale(1);
+  // @include transition(transform);
+
+  &:hover,
+  &:focus {
+    transform: scale(1.5);
+  }
+}
+
+// footer
+
+.team-modal {
+  text-decoration: underline;
+
+  cursor: pointer;
+}
+
+// .footer-svg {
+//   // margin-right: 10px;
+//   // margin-left: 10px;
+//   animation: heartBeat;
+//   animation-duration: 2000ms;
+//   animation-iteration-count: infinite;
+//   animation-timing-function: cubic-bezier(.4,0,.2,1);
+
+//   &:hover,
+//   &:focus {
+//     animation-play-state: paused;
+//   }
+// }
+
+// .footer-svg {
+//   font-size: 150px;
+// 	color: #e00;
+// 	animation: beat .25s infinite alternate;
+// 	transform-origin: center;
+//   timing-function: cubic-bezier(.4,0,.2,1);
+// }
+// @keyframes beat{
+// 	to { transform: scale(1.3); }
+// }
+
+#heart {
+    position: relative;
+    width: 14px;
+    height: 14px;
+    animation: heartbeat 1s infinite;
+}
+
+@keyframes heartbeat
+{
+  0%
+  {
+    transform: scale( .75 );
+  }
+  20%
+  {
+    transform: scale( 1 );
+  }
+  40%
+  {
+    transform: scale( .75 );
+  }
+  60%
+  {
+    transform: scale( 1 );
+  }
+  80%
+  {
+    transform: scale( .75 );
+  }
+  100%
+  {
+    transform: scale( .75 );
+  }
+}
+
+
