--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,7 +1,7 @@
 $page-max-width: 1600px;
 
 // $secondary-font: 'DM Sans', sans-serif;
-
+$main-font: 'Roboto', sans-serif;
 // Breakpoints
 
 $phone: 480px;
