--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,13 +13,14 @@
     </div>
   </nav>
   <div data-index="headerContent">
+    
     <form class="film-search" action="">
       <input
         class="film-search-input"
         type="text"
         placeholder="Search films"
         autocomplete="off"
-      /><i class="material-icons white search-icon">search</i>
+      /><i class="material-icons material-icons-search">search</i>
       <p>
         <!-- fetch status -->
       </p>
