--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -1,7 +1,7 @@
 /* Test maketa */
-* {
-    // outline: 1px solid tomato;
-}
+// * {
+//     outline: 1px solid tomato;
+// }
 .header {
   background-color: #000;
   position: relative;
