--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,7 +14,7 @@
   </nav>
   <div data-index="headerContent">
     
-    <form class="film-search" action="">
+    <form class="film-search">
       <input
         class="film-search-input"
         type="text"
